implement PDL toon fetch